...
    <string name="set_008">Alarm Output</string>
    <string name="set_009">Alarm Volume</string>
    <string name="set_010">Album List Image</string>
    <string name="set_011">ALL</string>
    <string name="set_012">Always　On</string>
    <string name="set_013">AM STEP 9K/10K</string>
    <string name="set_014">App Auto Launch</string>
    <string name="set_015">App</string>
    <string name="set_016">Version</string>
    <string name="set_017">Screen</string>
    <string name="set_019">ATT/MUTE</string>
    <string name="set_020">Audio</string>
    <string name="set_021">Auto</string>
    <string name="set_022">Auto Pl</string>
    <string name="set_023">Auto Pairing</string>
    <string name="set_024">AUX</string>
    <string name="set_026">No Name</string>
    <string name="set_027">Dynamic Bass Enhancer </string>
    <string name="set_028">Beep Tone</string>
    <string name="set_030">Brightness</string>
    <string name="set_032">BT Audio</string>
    <string name="set_034">BT Device</string>
    <string name="set_035">Call to …</string>
    <string name="set_036">Camera Calibration</string>
    <string name="set_038">Safety</string>
    <string name="set_040">Standard</string>
    <string name="set_041">Contact Type</string>
...
    <string name="set_053">Delete</string>
    <string name="set_055">Device Information</string>
    <string name="set_058">Dimmer</string>
    <string name="set_059">Direct Call</string>
    <string name="set_060">DISP Brightness</string>
    <string name="set_061">DISP Color</string>
    <string name="set_062">Display Off</string>
    <string name="set_063">Distance Unit</string>
    <string name="set_064">End User License Agreement</string>
    <string name="set_066">EULA</string>
    <string name="set_067">Fader/Balance</string>
    <string name="set_068">Sensitivity</string>
    <string name="set_069">Impact Alert</string>
...
    <string name="set_140">MIDDLE</string>
    <string name="set_144">Navigation</string>
    <string name="set_145">Navigation App</string>
    <string name="set_146">Voice Guidance</string>
    <string name="set_147">News</string>
    <string name="set_148">Normal</string>
    <string name="set_149">Pandora</string>
    <string name="set_150">Parking Sensor</string>
    <string name="set_152">Sensitivity</string>
    <string name="set_153">Pedestrian Alert</string>
    <string name="set_155">Phone Book Access</string>
    <string name="set_156">Phone</string>
    <string name="set_157">Playlist Image</string>
    <string name="set_158">Power Save</string>
    <string name="set_160">Preset</string>
    <string name="set_163">Preview</string>
    <string name="set_165">Privacy Policy</string>
    <string name="set_166">Detail</string>
    <string name="set_168">Simple</string>
    <string name="set_169">R</string>
...
    <string name="set_195">Slope</string>
    <string name="set_196">Easy Sound Fit</string>
    <string name="set_197">Sound Effect</string>
    <string name="set_198">Sound Retriever</string>
    <string name="set_199">Source Level Adjuster</string>
    <string name="set_200">Speaker Level</string>
    <string name="set_201">Spotify</string>
    <string name="set_202">Start</string>
    <string name="set_205">Stop</string>
    <string name="set_206">Subwoofer</string>
    <string name="set_207">SUPER HIGH</string>
    <string name="set_208">Super Todoroki Sound</string>
    <string name="set_210">Intermediate</string>
...
    <string name="set_221">TA:Custom</string>
    <string name="set_222">TA:Initial</string>
    <string name="set_223">TA:OFF</string>
    <string name="set_228">Theme</string>
    <string name="set_229">Time Alignment</string>
    <string name="set_230">UI Color</string>
    <string name="set_232">USB Auto</string>
    <string name="set_238">Vocal Cancel</string>
    <string name="set_239">Voice Recognition</string>
    <string name="set_240">Voice</string>
    <string name="set_241">No Application</string>
    <string name="set_243">Search</string>
    <string name="set_244">Device Search</string>
...
