<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    android:orientation="vertical">

    <View
        style="@style/borderLine"
        android:layout_width="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/advanced_audio_speaker_setting_menu_title_height">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:lines="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/set_117"
            android:textColor="@color/drawable_white_color"
            android:textSize="@dimen/advanced_audio_speaker_setting_menu_title_text_size" />

        <ImageView
            android:id="@+id/downButton"
            android:layout_width="@dimen/advanced_audio_speaker_setting_menu_button_width"
            android:layout_height="@dimen/advanced_audio_speaker_setting_menu_button_width"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/p0001_closebtn_1nrm" />

    </RelativeLayout>

    <View
        style="@style/borderLine"
        android:layout_width="match_parent" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="ltr" />
</LinearLayout>